fix design on safari

--- a/src/Server/Styles.module.css
+++ b/src/Server/Styles.module.css
@@ -67,6 +67,13 @@
     font-family: "Montserrat";
     font-weight: 500;
     font-size: 13px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-image: url("data:image/svg+xml;utf8,<svg fill='white' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
+    background-repeat: no-repeat;
+    background-position-x: 100%;
+    background-position-y: 7px;
 }
 .SwitchGame > option {
     font-family: "Montserrat" !important;
