--- a/src/components/Buttons.module.css
+++ b/src/components/Buttons.module.css
@@ -33,6 +33,41 @@
     box-sizing: border-box;
 }
 
+
+.dropdownButton {
+    display: flex;
+    align-items: center;
+    border: 1px solid var(--color-second);
+    padding: 10px 20px;
+    height: 40px;
+    border-radius: 8px;
+    color: #DBDBDB;
+    font-size: 13px;
+    font-weight: 500;
+    background: var(--color-container-v2);
+    display: flex;
+    flex-direction: row;
+    flex-grow: 0;
+    justify-content: center;
+    margin: 6px;
+    text-decoration: none;
+    outline: none;
+    font-family: "Montserrat";
+    max-width: 400px;
+    justify-content: space-between;
+    text-decoration: none;
+    text-decoration-color: transparent;
+    box-sizing: border-box;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-image: url("data:image/svg+xml;utf8,<svg fill='white' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
+    background-repeat: no-repeat;
+    background-position-x: 100%;
+    background-position-y: 7px;
+}
+
+
 .PlayerButton {
     color: var(--color-text);
     cursor: pointer;
